@@ -1,3 +1,7 @@
+2007-09-29  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/test/sl/test-sl.c: quiet gcc 3.4.3
+
 2007-09-07  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/man/Makefile.am: added manual page for test-sl program
